--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,16 @@
 		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>parent</artifactId> 
 			<version>2.3.3</version> </dependency> -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>2.3.3</version>
+		</dependency> -->
+		
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.5.2</version>
 		</dependency>
 		
 		<dependency>
