--- a/pom.xml
+++ b/pom.xml
@@ -356,9 +356,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>aspectj</groupId>
+			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.5.4</version>
+			<version>1.8.8</version>
 		</dependency>
 
 		<dependency>
