--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,8 @@
 		<profile.env>dev</profile.env>
 		<basedir>${project.basedir}/..</basedir>
 		<root.dir>${basedir}/..</root.dir>
-
 		<hystrix.version>1.5.3</hystrix.version>
 		<hystrix-metrics-event-stream.version>1.5.3</hystrix-metrics-event-stream.version>
-
 	</properties>
 
 
@@ -32,11 +30,11 @@
 
 	<dependencies>
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zookeeper-config</artifactId>
 			<version>${spring-cloud-zookeeper.version}</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -61,7 +59,6 @@
 		</dependency>
 
 
-		<!-- ??????????这个jar包干啥的???????? -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
@@ -80,6 +77,46 @@
 			<artifactId>spring-boot-starter-redis</artifactId>
 			<version>${spring-boot.version}</version>
 		</dependency>
+		
+	<!-- 	<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.1</version>
+		</dependency> -->
+		
+		<dependency>
+	        <groupId>org.springframework.batch</groupId>
+	        <artifactId>spring-batch-core</artifactId>
+	        <version>3.0.7.RELEASE</version>
+        </dependency>
+        
+        
+        
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-core</artifactId>
+	        <version>4.2.4.RELEASE</version>
+        </dependency>
+        
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>4.2.4.RELEASE</version>
+        </dependency>
+        
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-beans</artifactId>
+	        <version>4.2.4.RELEASE</version>
+        </dependency>
+        
+          <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-aop</artifactId>
+	        <version>4.2.4.RELEASE</version>
+        </dependency>
+        
+        
 
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-solr</artifactId> 
 			<version>${spring-boot.version}</version> </dependency> -->
@@ -88,13 +125,17 @@
 			<version>${spring-boot.version}</version> <exclusions> <exclusion> <artifactId>org.elasticsearch</artifactId> 
 			<groupId>elasticsearch</groupId> </exclusion> </exclusions> </dependency> -->
 
-		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>parent</artifactId> 
-			<version>2.3.3</version> </dependency> -->
+	<!-- <dependency>
+		<groupId>org.elasticsearch</groupId>
+		<artifactId>parent</artifactId>
+		<version>2.3.3</version>
+	</dependency> -->
 
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>2.3.3</version>
+			<!-- <version>1.5.2</version> -->
 		</dependency>
 		
 		<dependency>
@@ -434,8 +475,11 @@
 			<version>1.12.1.RELEASE</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.mongodb</groupId> <artifactId>mongodb-driver</artifactId> 
-			<version>3.2.2</version> </dependency> -->
+<!-- 	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongodb-driver</artifactId>
+		<version>3.2.2</version>
+	</dependency> -->
 
 
 		<dependency>
@@ -468,6 +512,54 @@
 			<artifactId>hystrix-metrics-event-stream</artifactId>
 			<version>${hystrix-metrics-event-stream.version}</version>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+		<!-- 	<artifactId>kafka_2.11</artifactId>
+			<version>0.10.0.0</version> -->
+			<artifactId>kafka_2.10</artifactId>
+			<version>0.8.1.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jmxtools</artifactId>
+					<groupId>com.sun.jdmk</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jmxri</artifactId>
+					<groupId>com.sun.jmx</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jms</artifactId>
+					<groupId>javax.jms</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		
+		 	 <dependency>
+               <groupId>org.apache.spark</groupId>
+               <artifactId>spark-core_2.10</artifactId>
+               <version>0.9.0-incubating</version>
+          </dependency>
+          <dependency>
+               <groupId>dnsjava</groupId>
+               <artifactId>dnsjava</artifactId>
+               <!--<version>2.1.1</version>-->
+			    <version>2.1.7</version>
+          </dependency>
+          <dependency>
+               <groupId>commons-net</groupId>
+               <artifactId>commons-net</artifactId>
+               <version>3.1</version>
+          </dependency>
+          <dependency>
+               <groupId>org.apache.hadoop</groupId>
+               <artifactId>hadoop-client</artifactId>
+              <!-- <version>1.2.1</version> -->
+			   <version>2.7.2</version>
+          </dependency>
+		
 
 
 		<!-- 爬虫 -->
@@ -489,6 +581,8 @@
 		<version>3.1.0</version>
 		<scope>compile</scope>
 	</dependency> -->
+	
+	
 
 
 
